--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <button id="generate">Сгенерировать</button>
         </div>
     </div>
-    <script src="personGenerator.js?02"></script>
-    <script src="init.js"></script>
+    <script src="main.js" type="module"></script>
 </body>
 
 </html>
